# vivoac

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  project-settings-docker.json  project-settings-test.json  project-settings.json  rebuild_and_run_docker.sh  requirements.txt  requirementsWin.txt  start_local_db.sh  test_main.py  todos.md
backend/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  project-settings-docker.json  project-settings-test.json  project-settings.json  requirements.txt  requirementsWin.txt  test_main.py
backend/package/: auth.py  db.py  globals.py
backend/package/api_engine/: api_engine.py  api_engine_base.py  class_functions.py  models.py  routes.py  routes_functions.py
backend/package/base_classes/: ai_api_engine.py  base_engine.py  script_db_engine.py
backend/package/http_models/: __init__.py  base_responses.py  models.py  parameters.py
backend/package/modules/: __init__.py
backend/package/modules/ai_api_engine/: elevenlabs_tts_engine.py  piper_tts_engine.py
backend/package/modules/script_db_engine/: excel_script_db_engine.py
backend/package/routes/: __init__.py
backend/package/routes/ai_api_handler/: models.py  routes.py
backend/package/routes/audio/: models.py  routes.py
backend/package/routes/engine_backend/: engine_backend.py  models.py  routes.py
backend/package/routes/script/: functions.py  models.py  routes.py
backend/package/routes/session/: functions.py  models.py  routes.py
backend/package/routes/user/: dependencies.py  functions.py  models.py  routes.py
backend/package/routes/voice/: functions.py  models.py  routes.py
backend/package/routes/voice_talent/: functions.py  models.py  routes.py
backend/package/tests/: __init__.py  ai_api_test.py  engine_tests.py  script_tests.py  session_tests.py  test_class.py  user_tests.py  voice_talent_tests.py  voice_tests.py
backend/package/utils/: decorators.py  functions.py  models.py
documentation/: documentation.md  installing.md  overview.md  testing.md
documentation/backend/: api_requests.md  backend.md
documentation/frontends/: frontends.md
documentation/frontends/plugin/: plugin.md
front_ends/plugin/ViVoAc/: vivoac.cmajor  vivoac.cmajorpatch
front_ends/plugin/vivoac/: vivoac.jucer
frontends/: .gitignore
frontends/plugin/: .gitignore  CMakeLists.txt  build_and_pack.sh  run_debug_standalone.sh
frontends/plugin/Installer/: readme.txt  welcome.txt
frontends/plugin/vivoac/: vivoac.jucer
frontends/plugin/vivoac/Source/: PluginEditor.h  PluginProcessor.cpp  v_AudioFileView.cpp  v_AudioFileView.h  v_BaseMenuComponent.h  v_BetterTableListBox.h  v_Colors.h  v_GeneratorMenu.cpp  v_GeneratorMenu.h  v_GeneratorTableModel.h  v_HTTPClient.h  v_MenuBar.h  v_ScriptMenu.cpp  v_SettingsMenu.cpp  v_SettingsMenu.h  v_VoiceMenu.h
frontends/plugin/vivoac_plugin/: CMakeLists.txt  package.cmake
frontends/plugin/vivoac_plugin/include/vivoac_plugin/: PluginEditor.h
frontends/plugin/vivoac_plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
frontends/plugin/vivoac_plugin/ui/vivoac-plugin/: package-lock.json  package.json
frontends/reactapp/vivoac-web/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  settings.json  tailwind.config.ts  tsconfig.json
modules/script_db_engine/: excel_script_db_engine.py
package/: __init__.py  auth.py  db.py  globals.py
package/api_engine/: api_engine.py  class_functions.py  functions.py  models.py  routes.py
package/base_classes/: __init__.py  ai_api_engine.py  audio_file_engine.py  base_engine.py  script_db_engine.py
package/modules/: __init__.py
package/modules/ai_api_engine/: elevenlabs_tts_engine.py  piper_tts_engine.py
package/modules/audio_file_engine/: basic_engine.py
package/modules/script_db_engine/: excel_script_db_engine.py
package/routes/: __init__.py
package/routes/ai_api_handler/: functions.py  models.py  routes.py
package/routes/audio/: functions.py  models.py  routes.py
package/routes/auth/: functions.py  models.py  routes.py
package/routes/engine_backend/: engine_backend.py  functions.py  models.py  routes.py
package/routes/script/: __init__.py  functions.py  models.py  routes.py
package/routes/session/: dependencies.py  functions.py  models.py  routes.py
package/routes/user/: dependencies.py  functions.py  models.py  routes.py
package/routes/voice_talent/: functions.py  models.py
package/tests/: __init__.py  ai_api_test.py  engine__tests.py  script_test.py  script_tests.py  session_test.py  session_tests.py  test_class.py
package/utils/: decorators.py  functions.py
package/utils/classes/: test_client.py
tests/: __init__.py  script_test.py  test_class.py
(+71 files in other folders)
